# VknConfig_AndroidTester

./: .gitignore  .gitmodules  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/nathanielmoehring/vknconfig/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/nathanielmoehring/vknconfig/: MainActivity.kt  NativeBridge.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/nathanielmoehring/vknconfig/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
